# cvpets

./: .gitignore  CMakeLists.txt  Dude.hpp  DudeSquad.hpp  FrameProviders.hpp  global.hpp  main.cpp  models.cpp  models.hpp  tracking.cpp  utils.hpp
